<resources>
    <string name="app_name">Sunshine2</string>

    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">95131</string>
    <string name="pref_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_notifications_enabled">Enabled</string>
    <string name="pref_notifications_disabled">Not Enabled</string>
    <string name="pref_notifications_default" translatable="false">true</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
</resources>